# time-tracker

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp.yml
src/: controller.hpp  main.cpp  verbBegin.hpp  verbEnd.hpp  verbList.hpp  verbRepl.hpp  verbStatus.hpp  verbTaskCompletion.hpp
